--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "[LiteRT/OTP.js] Build (Prefer Local Compiler)",
+            "label": "[LiteRT/Exception.js] Build (Prefer Local Compiler)",
             "type": "npm",
             "script": "build",
             "problemMatcher": [
@@ -13,7 +13,7 @@
             "isBackground": true
         },
         {
-            "label": "[LiteRT/OTP.js] Build (Watching, Prefer Local Compiler)",
+            "label": "[LiteRT/Exception.js] Build (Watching, Prefer Local Compiler)",
             "type": "npm",
             "script": "build-watch",
             "problemMatcher": [
