--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@litert/otp",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "The OTP support library of LiteRT.",
   "main": "lib/index.js",
   "scripts": {
-    "prepare": "npm run rebuild",
+    "prepublishOnly": "npm run rebuild",
     "build": "echo Using TypeScript && tsc -v && tsc -p .",
     "build-watch": "echo Using TypeScript && tsc -v && tsc -w -p .",
     "rebuild": "npm run clean && npm run lint && npm run build",
     "test": "echo See directory src/examples",
     "clean": "rm -rf lib examples",
-    "lint": "tslint -p . -c tslint.json"
+    "typecheck": "tsc -p . --noEmit",
+    "lint": "eslint --ext ts src"
   },
   "repository": {
     "type": "git",
@@ -32,10 +33,16 @@
   "typings": "lib/index.d.ts",
   "types": "lib/index.d.ts",
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "typescript": "^3.7.3"
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "husky": "^6.0.0",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@litert/encodings": "^2.1.0"
+    "@litert/encodings": "^2.2.0"
   }
 }
