--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "@litert/otp",
-  "version": "1.0.1",
-  "description": "The OTP support library of LiteRT.",
+  "version": "2.0.0",
+  "description": "The TOTP & HOTP implement for Node.JS",
   "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "prepublishOnly": "npm run rebuild",
+    "prepublishOnly": "npm run build-md-doc && npm run rebuild && npm run test",
     "build": "echo Using TypeScript && tsc -v && tsc -p .",
     "build-watch": "echo Using TypeScript && tsc -v && tsc -w -p .",
+    "build-md-doc": "./utils/generate-api-docs-md.sh",
+    "build-html-doc": "./utils/generate-api-docs-html.sh",
     "rebuild": "npm run clean && npm run lint && npm run build",
-    "test": "echo See directory src/examples",
+    "test": "node --enable-source-maps --test --experimental-test-coverage lib/*.test.js cli/*.test.js",
     "clean": "rm -rf lib examples",
-    "typecheck": "tsc -p . --noEmit",
-    "lint": "eslint --ext ts src",
-    "prepare": "husky install"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint": "./utils/eslint.sh",
+    "prepare": "husky"
+  },
+  "bin": {
+    "otp": "./cli/otp.js"
   },
   "repository": {
     "type": "git",
@@ -25,23 +32,26 @@
   "keywords": [
     "litert",
     "lrt",
-    "authentication",
-    "security",
-    "otp"
+    "totp",
+    "hotp",
+    "otp",
+    "2fa",
+    "mfa"
   ],
   "author": "Angus.Fenying <fenying@litert.org> (https://fenying.net)",
   "license": "Apache-2.0",
-  "typings": "lib/index.d.ts",
-  "types": "lib/index.d.ts",
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@types/node": "^18.7.15",
-    "@litert/eslint-plugin-rules": "^0.1.0",
-    "husky": "^8.0.1",
-    "typescript": "^4.3.4"
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@litert/eslint-plugin-rules": "^0.3.1",
+    "@types/node": "^22.10.2",
+    "husky": "^9.1.7",
+    "typedoc": "^0.28.5",
+    "typedoc-plugin-markdown": "^4.6.4",
+    "typedoc-vitepress-theme": "^1.1.2",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@litert/encodings": "^2.2.0"
+    "@litert/base32": "^1.0.1"
   }
 }
